Bugfix: Fix logo shifting due to appearance of scrollbar

--- a/src/css/Tabs.css
+++ b/src/css/Tabs.css
@@ -15,6 +15,7 @@
 .tabs {
     display: flex;
     justify-content: flex-start;
+    width: 100vw;
     max-height: 10vh;
     position: fixed;
     top: 0;
@@ -38,7 +39,7 @@
 
 .tabsfiller {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-grow: 1;
     align-items: center;
     border-bottom: 1px solid var(--secondary-font-color);
@@ -46,10 +47,9 @@
 }
 
 .tabslogo {
-    height: 40%;
+    height: 55%;
     max-width: 200px;
     object-fit: contain;
-    margin-right: 20px;
 }
 
 .tabheader {
